--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
    <header class="header">
     <a href="./index.html">
-    <img src="./images/Img-logo.png alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+    <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
     <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
     <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <!--selecting products by gender-->
