img log footer path

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
-      <img src="../Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+      <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
       <a href="./contact.html" title="contact us site">
