--- a/newproducts.html
+++ b/newproducts.html
@@ -11,17 +11,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo_images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Logo_images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Images/Logo_images/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="/Images/Logo_images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Images/Logo_images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Images/Logo_images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./Images/Logo_images/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="./Images/Logo_images/favicon.ico">
     <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
-    <script src="/js/newproducts.js" defer></script>
+    <script src="./js/newproducts.js" defer></script>
   </head>
   <body>
    <header class="header">
     <a href="./index.html">
-    <img src="./Images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+    <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
     <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
     <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <!--selecting products by gender-->
@@ -63,7 +63,7 @@
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
-      <img src="./Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+      <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
       <a href="./contact.html" title="contact us site">
