--- a/product/index.html
+++ b/product/index.html
@@ -21,14 +21,14 @@
 </head>
   <body>
     <header class="header">
-      <a href="/index.html">
+      <a href="../index.html">
       <img src="../images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
       <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
       <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
       <!--selecting products by gender-->
     <nav>
-      <a href="/womens.html" class="female-btn" id="female-btn">Women's</a>
-      <a href="/mens.html" class="male-btn" id="male-btn">Men's</a>
+      <a href="../womens.html" class="female-btn" id="female-btn">Women's</a>
+      <a href="../mens.html" class="male-btn" id="male-btn">Men's</a>
       <!--my cart-->
       <a href="/checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
     </nav> 
@@ -39,12 +39,12 @@
               <h1 class="slogan">Pushing the Comfort Zone</h1>
               <h2>Plan your next adventure with RAINYDAYS</h2>
             </div>
-          <a href="/newproducts.html" title="this is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
+          <a href="../newproducts.html" title="this is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
           </div>
         </section>
         <div class="note">The message will be here</div>
     <div class="continue-shopping">
-      <a href="/index.html">Continue Shopping</a>
+      <a href="../index.html">Continue Shopping</a>
     </div>
 <!--template for single product-->
     <div class="single-products-container" id="single-products-container">
@@ -54,7 +54,7 @@
       <a href="/product/index.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
     <footer class="footer">
       <div>
-        <a href="/index.html" title="home page">
+        <a href="../index.html" title="home page">
         <img src="../images/Img-logo.png" alt="Rainydays" class="logo"></a>
       </div>
       <aside>
@@ -83,7 +83,7 @@
       <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="/termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="../termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
         <a href="#" title="products women">Our products</a>
       </div>
