--- a/newproducts.html
+++ b/newproducts.html
@@ -26,8 +26,8 @@
     <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <!--selecting products by gender-->
   <nav>
-    <a href="/womens.html" class="female-btn" id="female-btn">Women's</a>
-    <a href="/mens.html" class="male-btn" id="male-btn">Men's</a>
+    <a href="./womens.html" class="female-btn" id="female-btn">Women's</a>
+    <a href="./mens.html" class="male-btn" id="male-btn">Men's</a>
     <!--my cart-->
     <a href="checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
   </nav> 
