--- a/womens.html
+++ b/womens.html
@@ -21,7 +21,7 @@
   <body>
    <header class="header">
     <a href="./index.html">
-    <img src="./Images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+    <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
     <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
     <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <!--selecting products by gender-->
@@ -63,7 +63,7 @@
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
-      <img src="./Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+      <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
       <a href="./contact.html" title="contact us site">
