--- a/womens.html
+++ b/womens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rainydays is a website for the sale of quality jackets for all kinds of weather. We are world-leading in the use of Gore-Tex for highly durable waterproofness.">
-    <title>Rainydays jacket | Home</title>
+    <title>Rainydays jacket | Woman</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/newstyles.css">
     <link rel="stylesheet" href="./css/home.css">
