link to checkout cart

--- a/newproducts.html
+++ b/newproducts.html
@@ -29,7 +29,7 @@
     <a href="./womens.html" class="female-btn" id="female-btn">Women's</a>
     <a href="./mens.html" class="male-btn" id="male-btn">Men's</a>
     <!--my cart-->
-    <a href="checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
+    <a href="./checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
   </nav> 
   </header>
       <section class="background-picture-mountain">
