--- a/newproducts.html
+++ b/newproducts.html
@@ -90,7 +90,7 @@
     <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="/termsAndConditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="./termsAndConditions.html" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
         <a href="#" title="products women">Our products</a>
       </div>
