link continue shopping

--- a/checkout/cart.html
+++ b/checkout/cart.html
@@ -23,7 +23,7 @@
     <div class="cart-header">
       <a href="../checkout/cart.html" class="cart-link"><i class="fa-solid fa-cart-shopping">(<span id="cartCount"></span>)</i></a><!--contain the counter of adding items to cart -->
       <a href="../checkout/confirmation/index.html" class="checkout-link" id="checkout-link">Checkout Confirmation</a>
-      <a href="/" class="btn-continue-shopping">Continue Shopping</a>
+      <a href="../" class="btn-continue-shopping">Continue Shopping</a>
     </div>
     <div class="cart">
       <div class="cart-items">
