--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rainydays is a website for the sale of quality jackets for all kinds of weather. We are world-leading in the use of Gore-Tex for highly durable waterproofness.">
     <title>Rainydays jacket | Terms and Conditions</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/newstyles.css">
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/termsandconditions.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/newstyles.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo_images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Logo_images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Images/Logo_images/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="/Images/Logo_images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Logo_images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Logo_images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./images/Logo_images/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="./images/Logo_images/favicon.ico">
     <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
-    <script src="/js/termsandconditions.js" defer></script>
+    <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
+    <script src="./js/termsandconditions.js" defer></script>
   </head>
   <body>
    <header class="header">
     <a href="./index.html">
-    <img src="./Images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+    <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
     <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
     <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <!--selecting products by gender-->
   <nav>
-    <a href="/womens.html" class="female-btn" id="female-btn">Women's</a>
-    <a href="/mens.html" class="male-btn" id="male-btn">Men's</a>
+    <a href="./womens.html" class="female-btn" id="female-btn">Women's</a>
+    <a href="./mens.html" class="male-btn" id="male-btn">Men's</a>
     <a href="/">Continue shopping</a>
     <!--my cart-->
-    <a href="checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
+    <a href="./checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
   </nav> 
   </header>
       <section class="background-picture-mountain">
@@ -40,7 +40,7 @@
             <h1 class="slogan">Pushing the Comfort Zone</h1>
             <h2>Plan your next adventure with RAINYDAYS</h2>
           </div>
-        <a href="/listofjackets.html" title="this is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
+        <a href="./listofjackets.html" title="this is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
         </div>
       </section>
       <!--Terms and Conditions-->
@@ -56,7 +56,7 @@
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
-      <img src="./Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+      <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
       <a href="./contact.html" title="contact us site">
