--- a/listofjackets.html
+++ b/listofjackets.html
@@ -5,32 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rainydays is a website for the sale of quality jackets for all kinds of weather. We are world-leading in the use of Gore-Tex for highly durable waterproofness.">
     <title>Rainydays jacket | List-of-Jackets</title>
-    <link rel="stylesheet" href="/css/listofjackets.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/newstyles.css">
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/newstyles.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo_images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Logo_images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Images/Logo_images/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="/Images/Logo_images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Logo_images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Logo_images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./images/Logo_images/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="./images/Logo_images/favicon.ico">
     <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
-    <script src="/js/filterjackets.js" defer></script>
+    <script src="./js/filterjackets.js" defer></script>
   </head>
   <body>
     <header class="header">
       <a href="./index.html">
-      <img src="./Images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+      <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
       <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
       <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
       <!--selecting products by gender-->
     <nav>
-      <a href="/womens.html" class="female-btn" id="female-btn">Women's</a>
-      <a href="/mens.html" class="male-btn" id="male-btn">Men's</a>
+      <a href="./womens.html" class="female-btn" id="female-btn">Women's</a>
+      <a href="./mens.html" class="male-btn" id="male-btn">Men's</a>
       <!--my cart-->
-      <a href="checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
+      <a href="./checkout/cart.html" class="cart-link">(<i class="fa-solid fa-cart-shopping"></i><span id="cartCount"></span>)</a>
     </nav> 
     </header>
   <main>
@@ -57,11 +56,11 @@
   </div> -->
 </div>
   <div class="up"></div>
-    <a href="/listofjackets.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="./listofjackets.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
-      <img src="./Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+      <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
   <aside>
     <a href="./contact.html" title="contact us site">
@@ -89,7 +88,7 @@
   <aside>
   <div class="caption">     
     <a href="#" title="privacy policy site">Privacy Policy</a>
-    <a href="/termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+    <a href="./termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
     <a href="#" title="contact us site">Contact Us</a>
     <a href="#" title="products women">Our products</a>
   </div>
