--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rainydays is a website for the sale of quality jackets for all kinds of weather. We are world-leading in the use of Gore-Tex for highly durable waterproofness.">
     <title>Rainydays jacket | Contact</title>
-    <link href="CSS/styles.css" rel="stylesheet">
-    <link href="CSS/contact.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/newstyles.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/Logo_images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/Logo_images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="Images/Logo_images/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="/Images/Logo_images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Logo_images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Logo_images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./images/Logo_images/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="./images/Logo_images/favicon.ico">
     <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
       <a href="./index.html">
-        <img src="./Images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo">
+        <img src="./images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo">
         </a>
       <div class="nav-container">
       <div class="icons">
@@ -33,16 +34,16 @@
         <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>     
       <nav>
         <a href="./index.html" title="this is a link to the home page">Home</a>
-        <a href="./List-of-Jackets.html" title="this is a link to the site for products" class="active">Women's</a>
-        <a href="./List-of-Jackets.html" title="this is a link to the site for products" class="active">Men's</a>
-        <a href="./About.html" title="this is a link to the site about us">About</a>
-        <a href="./Contact.html" title="this is a link to the contact page">Contact</a>
+        <a href="./listofjackets.html" title="this is a link to the site for products" class="active">Women's</a>
+        <a href="./listofjackets.html" title="this is a link to the site for products" class="active">Men's</a>
+        <a href="#" title="this is a link to the site about us">About</a>
+        <a href="#" title="this is a link to the contact page">Contact</a>
       </nav>
     </header>
     <main>
       <h1>Contact Us</h1>
         <div class="contact-item">
-          <img src="./Images/img-ontopofmountain.jpg" alt="people on top of a mountain" class="images-people-on-mountain" >
+          <img src="./images/img-ontopofmountain.jpg" alt="people on top of a mountain" class="images-people-on-mountain" >
           <div class="text-contact-hours"> 
             <p>Opening Hours</p>
             <p>CET</p>
@@ -51,7 +52,7 @@
             <p>Sunday:13-21</p>
           </div>
         </div>
-        <form action="./Contact.html" id="register" name="contact">
+        <form action="#" id="register" name="contact">
         <fieldset>
           <h2>Your Contact Details</h2>
           <label for="email" class="text-products">Mail</label>
@@ -83,7 +84,7 @@
     <footer class="footer">
       <div>
           <a href="./index.html" title="home page">
-          <img src="./Images/Img-logo.png" alt="Rainydays" class="logo"></a>
+          <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
       </div>
       <aside>
           <a href="./contact.html" title="contact us site">
@@ -110,10 +111,10 @@
      </aside>
      <aside>
       <div class="caption">     
-          <a href="./privacy-policy.html" title="privacy policy site">Privacy Policy</a>
-          <a href="./terms-conditions.html" title="terms & conditions site">Terms & Conditions</a>
+          <a href="#" title="privacy policy site">Privacy Policy</a>
+          <a href="./termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
           <a href="#" title="contact us site">Contact Us</a>
-          <a href="#" title="products women">Our products</a>
+          <a href="./womens.html" title="products women">Our products</a>
       </div>
       <div class="icon">
           <i class="fa-brands fa-facebook"></i>
