--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -5,29 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rainydays is a website for the sale of quality jackets for all kinds of weather. We are world-leading in the use of Gore-Tex for highly durable waterproofness.">
     <title>Rainydays jacket | Checkout-Success</title>
-    <link rel="stylesheet" href="../css/confirmation.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/checkoutsuccess.css">
+    <link rel="stylesheet" href="./css/confirmation.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/checkoutsuccess.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/Logo_images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../images/Logo_images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="../images/Logo_images/android-chrome-512x512.png">
-    <link rel="icon" type="image/x-icon" href="../images/Logo_images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Logo_images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/Logo_images/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./images/Logo_images/android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="./images/Logo_images/favicon.ico">
     <script src="https://kit.fontawesome.com/d3e1febfe2.js" crossorigin="anonymous"></script>
-    <script src="../js/confirmation.js" defer></script>
+    <script src="/js/confirmation.js" defer></script>
   </head>
   <body>
     <header class="header">
-      <a href="../index.html">
-      <img src="../images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
+      <a href="/index.html">
+      <img src="/images/Img-logo.png" alt="logo of Rainydays with the text pushing the comfort zone" class="logo-nav"></a>
       <input type="checkbox" name="hamburger-menu" id="hamburger-menu">
       <label for="hamburger-menu" class="hamburger-menu"><i class="fa-solid fa-bars"></i></label>
     <nav>
-      <a href="../womens.html" title="products">Women's</a>
-      <a href="../mens.html" title="products">Men's</a>
-      <a href="../">Continue shopping</a>
+      <a href="/womens.html" title="products">Women's</a>
+      <a href="/mens.html" title="products">Men's</a>
+      <a href="/">Continue shopping</a>
       <a class="shopping-cart">Shopping cart( <span id="cartCount">0</span>)</a><!--contain the counter of adding items to cart -->
     </nav>
     </header>
@@ -68,14 +68,14 @@
   </div>
     </main>
     <div class="up"></div>
-      <a href="../index.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
+      <a href="/index.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
     <footer class="footer">
       <div>
-        <a href="../index.html" title="home page">
-        <img src="../mages/Img-logo.png" alt="Rainydays" class="logo"></a>
+        <a href="/index.html" title="home page">
+        <img src="/images/Img-logo.png" alt="Rainydays" class="logo"></a>
       </div>
       <aside>
-        <a href="../contact.html" title="contact us site">
+        <a href="/contact.html" title="contact us site">
         <p><b>Visit</b></p></a>
       <div class="visit">
         <p>RAINYDAYS</p>
@@ -84,7 +84,7 @@
       </div>
       </aside>
       <aside>
-        <a href="../contact.html" title="contact us site">
+        <a href="/contact.html" title="contact us site">
         <p><b>Customer service</b></p></a>
       <div class="opening-hours">
         <p><i>Hours</i></p>
@@ -100,7 +100,7 @@
      <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="../termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="../confirmation/index.html" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
         <a href="#" title="products women">Our products</a>
       </div>
