link to list of jackets

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <div class="note">The message will be here</div>
 <!-- filter items by category,gender or genre -->
-<a href="/listofjackets.html" class="find-btn">Find your favorite jacket</a>
+<a href="./listofjackets.html" class="find-btn">Find your favorite jacket</a>
 <!--keeping, this belongs to the function displayData(data)-->
 <div class="all-products">
   <div id="loading"></div>
