--- a/listofjackets.html
+++ b/listofjackets.html
@@ -7,7 +7,7 @@
     <title>Rainydays jacket | List-of-Jackets</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/newstyles.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/listofjackets.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
