adding dark mode button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <div class="note">The message will be here</div>
 <!-- filter items by category,gender or genre -->
 <a href="./listofjackets.html" class="find-btn">Find your favorite jacket</a>
+<!--dark mode btn-->
+<button id="theme-toggle" class="btn-dark-mode">&#127769Dark Mode</button>
+<!--<button id="theme-toggle" class="btn-dark-mode">&#9728 Light Mode</button>-->
+
 <!--keeping, this belongs to the function displayData(data)-->
 <div class="all-products">
   <div id="loading"></div>
