--- a/womens.html
+++ b/womens.html
@@ -45,6 +45,7 @@
 <!-- filter items by category,gender or genre -->
 <!--<a href="/list-of-Jackets.html" class="find-btn">Find your favorite jacket</a>-->
 <!--keeping, this belongs to the function displayData(data)-->
+<button id="theme-toggle" class="btn-dark-mode">&#127769Dark Mode</button>
 <div class="all-products">
   <div id="loading"></div>
   <!-- <div class="product">
