added title text

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
             <h1 class="slogan">Pushing the Comfort Zone</h1>
             <h2>Plan your next adventure with RAINYDAYS</h2>
           </div>
-        <a href="./newproducts.html" title="this is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
+        <a href="./newproducts.html" title="This is a link to the site for new arrivals" class="cta-button">Shop New Arrivals</a>
         </div>
       </section>
       <div class="note">The message will be here</div>
 <!-- filter items by category,gender or genre -->
 <!--dark mode btn-->
 <button id="theme-toggle" class="btn-dark-mode">&#127769Dark Mode</button>
-<a href="./listofjackets.html" class="find-btn">Find your favorite jacket</a>
+<a href="./listofjackets.html" class="find-btn" title="Find your new jacket">Find your favorite jacket</a>
 
 
 <!--<button id="theme-toggle" class="btn-dark-mode">&#9728 Light Mode</button>-->
