fixes to check out page

--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -32,20 +32,21 @@
     </nav>
     </header>
   <main>
-    <div class="Checkout-Success">
+    <!--<div class="Checkout-Success">
       <h1>Success</h1>
       <i class="fa-solid fa-circle-check"></i>
-    </div>
+    </div>-->
       <!--Cart page-->
-      <!-- <div class="note">The message will be here</div> -->
+      <section class="note-section"><div class="note"><i class="fa-solid fa-check-circle"></i> Message will appear here</div></section>
       <div class="cart-page">
       <div class="cart-header">
       <!-- <a href="/checkout/confirmation/index.html" class="checkout-link">Checkout Confirmation</a> -->
       </div>
       <div class="cart">
+        <p id="totalPrice"></p>
         <div class="cart-items">
           <div class="cart-item">
-            <p id="totalPrice"></p>
+  
           <div class="left">
             <p class="product-name">Mens Casual Premium Slim Fit T-Shirts</p>
           </div>
