removing links that has no purpose

--- a/mens.html
+++ b/mens.html
@@ -60,14 +60,14 @@
   </div> -->
 </div>
   <div class="up"></div>
-    <a href="./index.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="./mens.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
       <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
-      <a href="./contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Visit</b></p></a>
     <div class="visit">
       <p>RAINYDAYS</p>
@@ -76,7 +76,7 @@
     </div>
     </aside>
     <aside>
-      <a href="./contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Customer service</b></p></a>
     <div class="opening-hours">
       <p><i>Hours</i></p>
@@ -92,9 +92,9 @@
     <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="./termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="#" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
-        <a href="#" title="products women">Our products</a>
+        <a href="#" title="products">Our products</a>
       </div>
       <div class="icon">
         <i class="fa-brands fa-facebook"></i>
