--- a/checkout/cart.html
+++ b/checkout/cart.html
@@ -50,14 +50,14 @@
     </div>
   </div>
   <div class="up"></div>
-    <a href="cart.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="./cart.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
   <footer class="footer">
     <div>
       <a href="../index.html" title="home page">
       <img src="../images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
-      <a href="../contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Visit</b></p></a>
     <div class="visit">
       <p>RAINYDAYS</p>
@@ -66,7 +66,7 @@
     </div>
     </aside>
     <aside>
-      <a href="../contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Customer service</b></p></a>
     <div class="opening-hours">
       <p><i>Hours</i></p>
@@ -82,7 +82,7 @@
     <aside>
     <div class="caption">     
       <a href="#" title="privacy policy site">Privacy Policy</a>
-      <a href="../termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+      <a href="#" title="terms & conditions site">Terms & Conditions</a>
       <a href="#" title="contact us site">Contact Us</a>
       <a href="#" title="products women">Our products</a>
     </div>
