--- a/listofjackets.html
+++ b/listofjackets.html
@@ -63,7 +63,7 @@
       <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
   <aside>
-    <a href="./contact.html" title="contact us site">
+    <a href="#" title="contact us site">
     <p><b>Visit</b></p></a>
   <div class="visit">
     <p>RAINYDAYS</p>
@@ -72,7 +72,7 @@
   </div>
   </aside>
   <aside>
-    <a href="./contact.html" title="contact us site">
+    <a href="#" title="contact us site">
     <p><b>Customer service</b></p></a>
   <div class="opening-hours">
     <p><i>Hours</i></p>
@@ -88,7 +88,7 @@
   <aside>
   <div class="caption">     
     <a href="#" title="privacy policy site">Privacy Policy</a>
-    <a href="./termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+    <a href="#" title="terms & conditions site">Terms & Conditions</a>
     <a href="#" title="contact us site">Contact Us</a>
     <a href="#" title="products women">Our products</a>
   </div>
