--- a/newproducts.html
+++ b/newproducts.html
@@ -58,14 +58,14 @@
   </div> -->
 </div>
   <div class="up"></div>
-    <a href="./index.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
+    <a href="./newproducts.html" title="up"><i class="fa-solid fa-arrow-up"></i></a>
   <footer class="footer">
     <div>
       <a href="./index.html" title="home page">
       <img src="./images/Img-logo.png" alt="Rainydays" class="logo"></a>
     </div>
     <aside>
-      <a href="./contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Visit</b></p></a>
     <div class="visit">
       <p>RAINYDAYS</p>
@@ -74,7 +74,7 @@
     </div>
     </aside>
     <aside>
-      <a href="./contact.html" title="contact us site">
+      <a href="#" title="contact us site">
       <p><b>Customer service</b></p></a>
     <div class="opening-hours">
       <p><i>Hours</i></p>
@@ -90,7 +90,7 @@
     <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="./termsAndConditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="#" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
         <a href="#" title="products women">Our products</a>
       </div>
