--- a/product/index.html
+++ b/product/index.html
@@ -83,7 +83,7 @@
       <aside>
       <div class="caption">     
         <a href="#" title="privacy policy site">Privacy Policy</a>
-        <a href="../termsandconditions.html" title="terms & conditions site">Terms & Conditions</a>
+        <a href="#" title="terms & conditions site">Terms & Conditions</a>
         <a href="#" title="contact us site">Contact Us</a>
         <a href="#" title="products women">Our products</a>
       </div>
